# ChangeLog for sys-apps/man-pages
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.132 2008/12/06 06:25:32 vapier Exp $

*man-pages-3.15 (06 Dec 2008)

  06 Dec 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-3.15.ebuild:
  Version bump.

*man-pages-3.14 (26 Nov 2008)

  26 Nov 2008; Peter Volkov <pva@gentoo.org> +man-pages-3.14.ebuild:
  Version bump.

*man-pages-3.13 (08 Nov 2008)

  08 Nov 2008; Robin H. Johnson <robbat2@gentoo.org> +man-pages-3.13.ebuild:
  Version bump.

*man-pages-3.12 (30 Oct 2008)

  30 Oct 2008; Peter Volkov <pva@gentoo.org> +man-pages-3.12.ebuild:
  Version bump.

*man-pages-3.11 (07 Oct 2008)

  07 Oct 2008; Peter Volkov <pva@gentoo.org> +man-pages-3.11.ebuild:
  Version bump.

*man-pages-3.10 (24 Sep 2008)

  24 Sep 2008; Peter Volkov <pva@gentoo.org> +man-pages-3.10.ebuild:
  Version bump.

*man-pages-3.09 (15 Sep 2008)

  15 Sep 2008; Peter Volkov <pva@gentoo.org> +man-pages-3.09.ebuild:
  Version bump.

*man-pages-3.08 (27 Aug 2008)

  27 Aug 2008; Doug Goldstein <cardoe@gentoo.org> +man-pages-3.08.ebuild:
  new version

  25 Aug 2008; Jeroen Roovers <jer@gentoo.org> man-pages-3.05.ebuild:
  Stable for HPPA (bug #235246).

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> man-pages-3.05.ebuild:
  ia64 stable wrt #235246

  24 Aug 2008; Tobias Klausmann <klausman@gentoo.org> man-pages-3.05.ebuild:
  Stable on alpha, bug #235246

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> man-pages-3.05.ebuild:
  Stable on ppc64; bug #235246

  22 Aug 2008; nixnut <nixnut@gentoo.org> man-pages-3.05.ebuild:
  Stable on ppc wrt bug 235246

  21 Aug 2008; Friedrich Oslage <bluebird@gentoo.org> man-pages-3.05.ebuild:
  Stable on sparc, bug #235246

  20 Aug 2008; Markus Meier <maekke@gentoo.org> man-pages-3.05.ebuild:
  amd64/x86 stable, bug #235246

  20 Aug 2008; Doug Goldstein <cardoe@gentoo.org> -man-pages-3.00.ebuild,