@@ -1,9 +1,9 @@
-DIST man-pages-3.13.tar.bz2 1019016 RMD160 4ce46100a8d2fcd8277984b30ce1655dd602dfa9 SHA1 434dc1439ffe4c257f5ba4cc57e1127c96ae9492 SHA256 e6de2a396cb42a2f5432f22c6c84fff2fd544b2067ed96d0609473316542db64
 DIST man-pages-3.14.tar.bz2 1033969 RMD160 e50630cc4d5c87b8600ce94ca459576029d58ffc SHA1 ac90a2d8452ca81ed01375d26c06618680b8ce99 SHA256 c3f4d80546145884c90fa7e286dd4aeb7e3b78218053d1621569d7e08a6d37e1
 DIST man-pages-3.15.tar.bz2 1040583 RMD160 d88b1075b4268c3c7a94836746f7450f65c48dfd SHA1 449e079877b17994a22ca8380837cae8088d4627 SHA256 10f66838f9b15ba21e376b75f48a0a7de325ba38c38418a3a05f34f1e34f225f
+DIST man-pages-3.16.tar.bz2 1048770 RMD160 7d25b8426e6d8d44804ad235b407a63ace2240d4 SHA1 f9c57ab661fbbf048eb49bc42aa187c6349bcf44 SHA256 a9331f053cf4f1a9322a9acfc15a010d5904ddf1f7c681c19ad7379889b1f880
 DIST man-pages-gentoo-2.tar.bz2 5141 RMD160 0d394dbc1a9c825c6612c96aad1433ab5d02aa6f SHA1 f0959fce5c6a32ddb776806fd59fe3f157686a69 SHA256 b7d9423c2069e587deb7671273d4a1ffed7d31b9f95a689b128a759d636762f0
-EBUILD man-pages-3.13.ebuild 1831 RMD160 88d9ed67875e8187b4042049c3115538686d925d SHA1 a9549f2d45dead3828aaf4aa8edb62c7bec0ed48 SHA256 8e59e5c00b282359c4f48f3b297e852d76f9fb7ec53c5bb9b85c28d2fc13ac8c
 EBUILD man-pages-3.14.ebuild 1831 RMD160 f477e36c0378a1e45c394b6115afa8621ba9d0de SHA1 9e67984fa95a7dec02008c11fa8974585d45e5ea SHA256 4fd890fb8f77f372f50d8abc7d7d4fcca435c2d87b174332f42a3a43b462366c
-EBUILD man-pages-3.15.ebuild 1843 RMD160 e9da5a5175f81eba22f1da9d442dc9c13b22db35 SHA1 baf5655b80b05e7f724ce49747e21a5c15f6a313 SHA256 c96fe874e6aee5adc3d7d0548aaeb8fbf4081bf7e1b710acccdddb415aec3450
-MISC ChangeLog 16911 RMD160 c44ea019e9e292611584de93e0070b1ddd874866 SHA1 8955beb1d22fc6b6365691783688d69f4a53b9b6 SHA256 ab24aa2d8dae27965fa4915d5907b33927af36aa60ed5fccf4adc237ce0787ab
+EBUILD man-pages-3.15.ebuild 1843 RMD160 a9773ee0881a3ddaf46ea3f66b3c10a897a5c48b SHA1 f16c9be7f2a2e195cbc803d308e7eb8cd38f2235 SHA256 9e343b137a4701620c5f66c34ded157a325e201789ea745d54a5883ea07d3b4e
+EBUILD man-pages-3.16.ebuild 1843 RMD160 6f68ca864642ee5e108873c1f4d7daaf6502a20a SHA1 3df0f738aa4186636a05158e1f89082afdcbbeb5 SHA256 15efb7a17e55962bd42107ad6475b72f71a0e53e206bc875a5e6fde5f0a739ce
+MISC ChangeLog 17033 RMD160 1ca6834eb1d9a617e6435284d826a8db217432f4 SHA1 da88582ab03af84397500e31e6584c3241a689b9 SHA256 b13efc05e682882ad8e03abab101ca5832d0a47b79cac97325437ef74cee505e
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
