@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/man-pages
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.132 2008/12/06 06:25:32 vapier Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.133 2009/01/13 02:34:31 vapier Exp $
+
+*man-pages-3.16 (13 Jan 2009)
+
+  13 Jan 2009; Mike Frysinger <vapier@gentoo.org> +man-pages-3.16.ebuild:
+  Version bump.
 
 *man-pages-3.15 (06 Dec 2008)
 
